tests/rosetta/transpiler/Swift/base64-decode-data.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden3647223157/001/main.swift:43:38: warning: forced cast of 'String' to same type has no effect
 41 |         var i: Int = 0
 42 |         while (i < Int(((s).count))) {
 43 |             if ((String(Array(s)[i]) as! String) == ch) {
    |                                      `- warning: forced cast of 'String' to same type has no effect
 44 |                 return Int(i)
 45 |             }

/tmp/TestSwiftTranspiler_Rosetta_Golden3647223157/001/main.swift:53:65: warning: forced cast of 'String' to same type has no effect
 51 |         var i: Int = 0
 52 |         var neg: Bool = false
 53 |         if ((Int(((str).count)) > 0) && ((String(Array(str)[0]) as! String) == "-")) {
    |                                                                 `- warning: forced cast of 'String' to same type has no effect
 54 |             neg = true
 55 |             i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden3647223157/001/main.swift:60:33: error: initializer 'init(_:)' requires that 'T' conform to 'BinaryInteger'
 58 |         let digits: [String: Any] = ["0": 0, "1": 1, "2": 2, "3": 3, "4": 4, "5": 5, "6": 6, "7": 7, "8": 8, "9": 9]
 59 |         while (i < Int(((str).count))) {
 60 |             n = Int(((n * 10) + Int((digits[(String(Array(str)[i]) as! String)] as! Any))))
    |                                 `- error: initializer 'init(_:)' requires that 'T' conform to 'BinaryInteger'
 61 |             i = Int((i + 1))
 62 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden3647223157/001/main.swift:60:68: warning: forced cast of 'String' to same type has no effect
 58 |         let digits: [String: Any] = ["0": 0, "1": 1, "2": 2, "3": 3, "4": 4, "5": 5, "6": 6, "7": 7, "8": 8, "9": 9]
 59 |         while (i < Int(((str).count))) {
 60 |             n = Int(((n * 10) + Int((digits[(String(Array(str)[i]) as! String)] as! Any))))
    |                                                                    `- warning: forced cast of 'String' to same type has no effect
 61 |             i = Int((i + 1))
 62 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden3647223157/001/main.swift:60:81: warning: forced cast from 'Any?' to 'Any' only unwraps optionals; did you mean to use '!'?
 58 |         let digits: [String: Any] = ["0": 0, "1": 1, "2": 2, "3": 3, "4": 4, "5": 5, "6": 6, "7": 7, "8": 8, "9": 9]
 59 |         while (i < Int(((str).count))) {
 60 |             n = Int(((n * 10) + Int((digits[(String(Array(str)[i]) as! String)] as! Any))))
    |                                                                                 `- warning: forced cast from 'Any?' to 'Any' only unwraps optionals; did you mean to use '!'?
 61 |             i = Int((i + 1))
 62 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden3647223157/001/main.swift:174:45: warning: forced cast of 'String' to same type has no effect
172 |         var i: Int = 0
173 |         while (i < Int(((enc).count))) {
174 |             let ch = (String(Array(enc)[i]) as! String)
    |                                             `- warning: forced cast of 'String' to same type has no effect
175 |             if (ch == "=") {
176 |                 break
